fix(MgComp/MgInputTextarea): render line-break in readonly
CORE-3175

--- a/packages/styles/scss/components/mg-input-textarea.scss
+++ b/packages/styles/scss/components/mg-input-textarea.scss
@@ -23,6 +23,10 @@
       resize: vertical;
     }
   }
+
+  &.mg-c-input--readonly .mg-c-input__input-container {
+    white-space: pre-line;
+  }
 }
 
 /**
